Tidy up visual studio projects